--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
-        "masbug/flysystem-google-drive-ext": "^2.2"
+        "masbug/flysystem-google-drive-ext": "^2.2",
+        "phpoffice/phpspreadsheet": "^1.25"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -68,5 +69,8 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "platform": {
+        "php": "7.3"
+    }
 }
