vinhndq thống kê báo cáo thi & thống kê phổ điểm

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "consoletvs/charts": "6.*",
         "doctrine/dbal": "^3.4",
         "google/apiclient": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
